# antsy_description

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: rviz_config.rviz
launch/: description.launch.py  display.launch.py  gazebo.launch.py  rviz.launch.py
meshes/: coxa_bl_1.stl  coxa_br_1.stl  coxa_fl_1.stl  coxa_fr_1.stl  coxa_ml_1.stl  coxa_mr_1.stl  foot_bl_1.stl  foot_br_1.stl  foot_fl_1.stl  foot_fr_1.stl  foot_ml_1.stl  foot_mr_1.stl  tibia_bl_1.stl  tibia_br_1.stl  tibia_fl_1.stl  tibia_fr_1.stl  tibia_ml_1.stl  tibia_mr_1.stl
meshes/simple_meshes/: foot_simple.stl  tibia_simple.stl
urdf/: antsy.gazebo  antsy.trans  antsy.xacro  antsy_description.urdf  antsy_description.xacro  materials.xacro  properties.urdf.xacro
